# database-45-steps

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile  test_kv.cpp
cpp/: database.h  makefile  test_kv.cpp
cpp/include/: bit_utils.h  entry.h  platform.h  reader.h
cpp/src/: entry.cpp  platform_unix.cpp
include/: bit_utils.h  cell.h  cell_codec.h  db_error.h  entry.h  entry_codec.h  kv.h  log.h  log_format.h  platform.h  platform_unix.h  platform_windows.h  row.h  row_codec.h  schema.h  schema_codec.h  table.h  types.h  version.h.in
include/core/: bit_utils.h  db_error.h  platform.h  platform_unix.h  platform_windows.h  reader.h  types.h
include/kv/: entry.h  entry_codec.h  kv.h  log.h  log_format.h
include/sql/: database.h
include/table/: cell.h  cell_codec.h  row.h  row_codec.h  schema.h  schema_codec.h  table.h
src/: cell_codec.cpp  entry.cpp  entry_codec.cpp  kv.cpp  log.cpp  platform_unix.cpp  platform_windows.cpp  row_codec.cpp  schema_codec.cpp  table.cpp
src/core/: platform_unix.cpp  platform_windows.cpp
src/kv/: entry_codec.cpp  kv.cpp  log.cpp
src/sql/: database.cpp
src/table/: cell_codec.cpp  row_codec.cpp  schema_codec.cpp  table.cpp
test/: test_cell.cpp  test_entry.cpp  test_kv.cpp  test_row.cpp  test_table.cpp  test_utils.h
test/kv/: test_entry.cpp  test_kv.cpp
test/table/: test_cell.cpp  test_row.cpp  test_table.cpp
